--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
     @apply transition-all duration-300;
   }
   body {
-    @apply tracking-m  text-body-m sm:text-body-d select-none;
+    @apply tracking-m  text-body-m sm:text-body-d select-none font-medium;
 
     user-drag: none;
     -webkit-user-drag: none;
